2009-01-17 12:44  paddockd

	* ChangeLog, lib/portaudio/pa_unix_oss/pa_unix_oss.c,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added fix from ivy for portaudio
	  v19 (alsa) Pa_GetStreamTime.
	  Added fix for Pa_StreamTime for portaudio v18.1 (unix_oss).
	  Added obsolete comment to help for SIGNAL option.
	  Increased version to 25.

2008-12-21 15:18  paddockd

	* ChangeLog, lib/libportaudio/linux24/lib/libportaudio-debug.a,
	  lib/portaudio/pa_win_ds/pa_dsound.c, makefile.linux24-alsa,
	  makefile.linux24-display, makefile.linux24-i586-display,
	  src/squeezeslave/squeezeslave.c: Removed
	  -DUSE_SIGNALS_FOR_RESTART from linux24 makefiles.
	  Redirected more messages to stderr.
	  Added 5 second timeout to INTERACTIVE select to fix retry logic
	  stall until a key was pressed.
	  Removed PortAudio message output for pa_dsound.c.
	  Removed libpopt references in makefiles.
	  Added debug version of libportaudio for linux24 alsa builds.
	  Increased version to 24.

2008-12-02 12:11  paddockd

	* ChangeLog, makefile.linux24-display,
	  makefile.linux24-i586-display, src/squeezeslave/squeezeslave.c:
	  Added , key for rewind.
	  Added . key for forward to remove need for shift key use.
	  Added linux24 display makefile without alsa.
	  Increased version to 23.

2008-11-19 13:28  paddockd

	* .lircrc, ChangeLog, ReleaseNotes, config, config/.lircrc,
	  makefile.linux26-alsa-display,
	  patches/squeezecenter_var_size_display.patch,
	  patches/squeezeslave-display.patch, src/slimproto/slimproto.c,
	  src/squeezeslave/squeezeslave.c: Added Graham's display changes
	  to repository.

2008-11-19 12:17  paddockd

	* ChangeLog, lib/popt, lib/popt/build-popt-linux24,
	  lib/popt/build-popt-s9, lib/popt/linux24,
	  lib/popt/linux24/include, lib/popt/linux24/include/popt.h,
	  lib/popt/linux24/lib, lib/popt/linux24/lib/libpopt.a,
	  lib/popt/s9sparc, lib/popt/s9sparc/include,
	  lib/popt/s9sparc/include/popt.h, lib/popt/s9sparc/lib,