@@ -1,8 +1,15 @@
+# Requires the following MacPorts installed to compile;
+# MacPorts: flac, libvorbis, libmad
+# Modify portaudio lib to change the uint32 typedef as it conflicts with a system library
+# cd lib/portaudio && perl -pi -e 's,uint32,pa_uint32,g' */*.c */*.h
+# To run on boot as a system daemon, you can set it up as a launched UserDaemon.
+# put config/squeezeslave.plist in /Library/LaunchDaemons
+
 CC=gcc
 
-CFLAGS=-Wall -DSLIMPROTO_DEBUG -D__BIG_ENDIAN__
+CFLAGS=-Wall -DSLIMPROTO_DEBUG
 
-INCLUDE=-Ilib/portaudio/pa_common -Ilib/portaudio/pablio -Ilib/portmixer/px_common -Isrc
+INCLUDE=-Ilib/portaudio/pa_common -Ilib/portaudio/pablio -Ilib/portmixer/px_common -Isrc -I/opt/local/include
 
 PORTAUDIOFILES:=lib/portaudio/pa_mac_core/pa_mac_core.c lib/portaudio/pa_common/pa_lib.c lib/portaudio/pa_common/pa_convert.c lib/portaudio/pablio/ringbuffer.c
 
@@ -11,7 +18,6 @@ PORTMIXERFILES:=lib/portmixer/px_mac_core/px_mac_core.c
 SLIMPROTOFILES:=src/slimaudio/slimaudio_http.c src/slimaudio/slimaudio_decoder.c src/slimaudio/slimaudio_decoder_flac.c src/slimaudio/slimaudio_decoder_mad.c src/slimaudio/slimaudio_decoder_vorbis.c src/slimaudio/slimaudio_decoder_pcm.c src/slimaudio/slimaudio_output.c src/slimaudio/slimaudio_buffer.c src/slimaudio/slimaudio.c src/slimproto/slimproto.c
 
 SQUEEZESLAVEFILES:=src/squeezeslave/squeezeslave.c
-
 
 .c.o:
 	${CC} $(CFLAGS) -c $(INCLUDE) $< -o $*.o
@@ -30,8 +36,7 @@ lib/libslimproto.a: $(SLIMPROTOFILES:.c=.o)
 	ranlib lib/libslimproto.a
 
 bin/squeezeslave : $(SQUEEZESLAVEFILES:.c=.o) $(PORTMIXERFILES:.c=.o) lib/libslimproto.a lib/libportaudio.a
-	${CC} -o bin/squeezeslave $^ -L/usr/local/lib -lmad -lFLAC -lvorbisfile -lvorbis -logg /System/Library/Frameworks/CoreAudio.framework/CoreAudio /System/Library/Frameworks/AudioToolbox.framework/AudioToolbox -lpthread
-
+	${CC} -o bin/squeezeslave $^ /opt/local/lib/libmad.a /opt/local/lib/libFLAC.a /opt/local/lib/libvorbisfile.a /opt/local/lib/libvorbis.a /opt/local/lib/libogg.a /System/Library/Frameworks/CoreAudio.framework/CoreAudio /System/Library/Frameworks/AudioToolbox.framework/AudioToolbox -lpthread
 
 clean:
 	-@rm -f $(PORTAUDIOFILES:.c=.o)
