@@ -5,12 +5,12 @@ https://sourceforge.net/project/showfiles.php?group_id=105169&package_id=176494
 
 What's new in Squeezeslave 0.8
 
-Works with squeezecenter versions 6.5.4 through 7.2.1.
+Works with squeezecenter versions 6.3.1 through 7.4
 
 Binaries available for Windows, Linux and Solaris both Sparc and Intel.
 
 Win32 version uses Direct X.
-Linux versions continue to use the OSS audio driver.
+Linux versions work with OSS and Alsa audio drivers.
 Solaris versions use native solaris mixer interface.
 
 A Pentium MMX binary is also available for linux. Works great on an old Pentium MMX laptop at 133Mhz with 48MB of memory.
